# vulkan-game

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  run.sh
include/zEngine/: application.h  swapchain.h  window.h
include/zEngine/common/: asserts.h  surface_properties.h
include/zEngine/configuration/: app_settings.h
include/zEngine/devices/: device_browser.h  logical_device.h  physical_device.h  queue_infos.h
scripts/: compile_shaders.sh
src/: main.cc  main.cpp
src/common/: asserts.cc  asserts.h  common.h
src/common/config/: configuration.h  configuration_loader.cc  configuration_loader.h
src/engine/: engine.h  engine_vulkan.h
src/engine/commands/command_pool/: command_pool.cc  command_pool.h
src/engine/devices/: device_requirement.h
src/engine/devices/device_browser/: device_browser.cc  device_browser.h
src/engine/instance/: instance.cc  instance.h
src/engine/surface/: surface.cc  surface.h
src/engine/window/: window.cc  window.h
src/game/: game.h
src/game/application/: application.cc  application.h
src/vk_builders/: application_info_builder.cc  application_info_builder.h  device_create_info_builder.cc  device_create_info_builder.h  image_view_create_info_builder.cc  image_view_create_info_builder.h  instance_create_info_builder.cc  instance_create_info_builder.h  swapchain_create_info_builder.cc  swapchain_create_info_builder.h  vk_builder.h
src/zEngine/: application.cpp  swapchain.cpp  window.cpp
src/zEngine/common/: asserts.cpp
src/zEngine/devices/: device_browser.cpp  logical_device.cpp  physical_device.cpp  queue_infos.cpp
(+17 files in other folders)
